--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -9,6 +9,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <!-- TODO: Add necessary styles -->
+    <!-- Add necessary styles -->
+    <style name="DefaultButtonStyle">
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="HeaderStyle">
+        <item name="android:textColor">@color/gray50</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
 </resources>
