--- a/starter/app/src/main/res/layout/election_list_item.xml
+++ b/starter/app/src/main/res/layout/election_list_item.xml
@@ -16,6 +16,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:paddingBottom="@dimen/default_padding"
+        android:onClick="@{() -> clickListener.onClick(election)}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
