--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -23,4 +23,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="election_information_url">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:layout_marginTop">@dimen/default_padding</item>
+    </style>
+
 </resources>
